plugins {
  id 'idea'
  id "org.jetbrains.gradle.plugin.idea-ext" version "1.3"
}

subprojects {

  apply plugin: 'java'

  java.toolchain.languageVersion = JavaLanguageVersion.of(21)
  java.withSourcesJar()
  java.withJavadocJar()

  repositories {
    mavenCentral()
    mavenLocal()
    maven {
      url "https://www.cursemaven.com"
      content {
        includeGroup "curse.maven"
      }
    }
  }

  dependencies {
    configurations.configureEach {
      resolutionStrategy.force 'org.ow2.asm:asm:9.8'
      resolutionStrategy.force 'org.ow2.asm:asm-commons:9.8'
    }
  }

  tasks.register('wrapper', Wrapper) {
    gradleVersion = '9.6.1'
    distributionType = Wrapper.DistributionType.BIN
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
  }

  tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
  }

  tasks.withType(Javadoc).configureEach {
    enabled = false
  }

  tasks.register("prepareKotlinBuildScriptModel") {}

  idea {
    module {
      downloadSources = true
      downloadJavadoc = true
    }
  }

  // Local Easy Model Entities loader artifact (runtime); null falls back to CurseForge.
  ext.findLocalEasyModelEntitiesLoader = { String loader ->
    def version = project.findProperty('easy_model_entities_version')
    if (version == null) {
      return null
    }
    def mcVersion = project.minecraft_version
    def jar =
        file("${System.getProperty('user.home')}/.m2/repository/de/markusbordihn/easymodelentities/"
            + "easy_model_entities-${loader}-${mcVersion}/${version}/"
            + "easy_model_entities-${loader}-${mcVersion}-${version}.jar")
    return jar.exists()
        ? "de.markusbordihn.easymodelentities:easy_model_entities-${loader}-${mcVersion}:${version}"
        : null
  }

  configurations.configureEach {
    resolutionStrategy {
      cacheChangingModulesFor 0, 'minutes'
      cacheDynamicVersionsFor 15, 'minutes'
    }
  }
}

tasks.register('allGameTests') {
  group = 'verification'
  description = 'Runs Fabric, Forge and NeoForge game tests.'
  dependsOn ':Fabric:runGameTest', ':Forge:runGameTestServer', ':NeoForge:runGameTestServer'
}

tasks.register('fullCheck') {
  group = 'verification'
  description = 'Runs check and game tests for all platforms (Common, Fabric, Forge, NeoForge).'
  dependsOn ':Common:check', ':Fabric:check', ':Forge:check', ':NeoForge:check', 'allGameTests'
}
